taking outline off and fixing spacing

--- a/Portfolio Website/css/portfoliostyle.css
+++ b/Portfolio Website/css/portfoliostyle.css
@@ -6,9 +6,11 @@ body{
     font-family: 'Lato', sans-serif;
 }
 
+/*
 div{
     outline: 1px solid lime;
 }
+*/
 
 /* Header Section */
 .header{
@@ -154,7 +156,7 @@ div{
     margin-left: auto;
     margin-right: auto;
     max-width: 900px;
-    height: 2000px;
+    height: 1950px;
     text-align: center;
 }
 
@@ -233,7 +235,7 @@ div{
     margin-right: auto;
     max-width: 900px;
     text-align: center;
-    height: 800px;
+    height: 750px;
 }
 
 .LENSPhoto img{
